优化执行逻辑，假如Nano_Banana_Pro生成图片